--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
             <br>
             <!--Links-->
             <section style="padding-left: 20%;padding-right: 20%;">
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortress.s3.amazonaws.com/Wireless+Web+Florida/index.html">https://rankfortress.s3.amazonaws.com/Wireless+Web+Florida/index.html</a><br>
                 <br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortresss.s3.us-east-005.backblazeb2.com/Wireless+Web+Florida/index.html">https://rankfortresss.s3.us-east-005.backblazeb2.com/Wireless+Web+Florida/index.html</a><br>
                 <br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://rankfortressss.github.io/Wireless-Web-Florida/">https://rankfortressss.github.io/Wireless-Web-Florida/</a><br>
                 <br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://wireless-web-florida.netlify.app/">https://wireless-web-florida.netlify.app/</a><br>
                 <br>
             </section>
 
